# Tetris-A.A.-2023-2024

./: Block.cpp  Blocks.h  CMakeLists.txt  Makefile  README.md  Shape0Block.cpp  Shape1Block.h  main.cpp  tetris
file menu/: CMakeLists.txt  classica.hpp  classifica.cpp  main.cpp  menu  menu.cpp
src/: CMakeLists.txt  Tetramini.cpp  Tetramini.hpp  classifica.cpp  classifica.hpp  grid.cpp  grid.hpp  main.cpp  menu.cpp  menu.hpp  my_list.cpp  my_list.hpp  tetris
src/blocks/: Block.h  Blocks.cpp  Shape0Block.hpp  Shape1Block.cpp
src/game/: grid.cpp  grid.hpp
